# pyFastfusion

./: README.md  bin-ni2
OpenNI2-master-2.2.0.33/: memo.org
OpenNI2-master-2.2.0.33/Source/Documentation/java/: allclasses-frame.html  allclasses-noframe.html  constant-values.html  deprecated-list.html  help-doc.html  index-all.html  index.html  overview-tree.html
OpenNI2-master-2.2.0.33/Source/Documentation/java/org/openni/: CoordinateConverter.html  CropArea.html  Device.html  DeviceInfo.html  ImageRegistrationMode.html  OpenNI.DeviceConnectedListener.html  OpenNI.DeviceDisconnectedListener.html  OpenNI.DeviceStateChangedListener.html  OpenNI.html  PixelFormat.html  PlaybackControl.html  Point2D.html  Point3D.html  Recorder.html  SensorInfo.html  SensorType.html  Version.html  VideoFrameRef.html  VideoMode.html  VideoStream.CameraSettings.html  VideoStream.NewFrameListener.html  VideoStream.html  package-frame.html  package-summary.html  package-tree.html
doc/: Makefile  index.html  index.org  style.css
docs/: index.html
dvo_slam/: memo.org  pts_plot.py  run_with_rgbd_dataset.sh
fastfusion-master/: CMakeLists.txt  data  kludge-build-osx  opencv.cpp  run_with_rgbd_dataset.sh
fastfusion-master/src/: CMakeLists.txt  onlinefusionviewer.cpp  onlinefusionviewer_if.cpp  onlinefusionviewer_if.hpp  onlinefusionviewer_main.cpp
fastfusion-master/src/auxiliary/: .memory.cpp.swp  .ocv_tools.cpp.swp  CMakeLists.txt  memory.cpp  ocv_tools.cpp
fastfusion-master/src/camerautils/: CMakeLists.txt
fastfusion-master/src/fusion/: CMakeLists.txt  geometryfusion_mipmap_cpu.cpp  geometryfusion_mipmap_cpu.hpp  mesh_interleaved.cpp  mesh_interleaved.hpp
modeler/: bin_if.py  cam_abstract.py  cam_ctrl.py  cam_obj.py  cam_snap.py  cols_plot.py  custom_threading.py  glvw_abstract.py  glvw_planar.py  glvw_snap.py  glwidget_abstract.py  glwidget_world.py  main.py  pcl  shader_if.py  test_QDoubleSpinBox.py  test_planes.py  util.py  world_ctrl.py  zetcode_qfiledialog.py
pcl-sac/: CMakeLists.txt  build_tree.cpp  cloud_snap_ruler50cm.pcd  cluster_extraction.cpp  extract_indices.cpp  get_points_indices.cpp  global_hypothesis_verification.cpp  greedy_projection.cpp  main_ground_based_people_detection.cpp  nearest_neighbors.cpp  pcl_ctypes.cpp  pcl_visualizer_demo.cpp  planar_segmentation.cpp  random_sample_consensus.cpp  range_image_border_extraction.cpp  test_python_pcl.py  test_vfh_nn.sh
python-pcl-master/: .gitignore  setup.py  table_scene_mug_stereo_textured.pcd
recorder/: associate.py  depth-sensor-ope-range.org  get_txt_list.py  libOpenNI2.dylib  test_save_frames_dvo_slam.py  zfill.py
recorder/data-fastfusion-tum/: readme.txt
worlds/world-e6p-full400/: ellispsoid.csv  list_rot_cam_fusion.npy  list_stamp_cam_fusion.npy  list_traj_cam_fusion.npy
worlds/world-e6p-full400/masks/: 2.537886_model.csv  2.537886_raw.csv  2.806014_model.csv  2.806014_raw.csv  memo.org
worlds/world-e6p-full400/shapes/a_model/: ellipsoid_LMA.csv  ellipsoid_direct.csv  ellipsoid_ransac.csv
worlds/world-e6p-full400/shapes/a_raw/: ellipsoid_LMA.csv  ellipsoid_direct.csv  ellipsoid_ransac.csv
worlds/world-e6p-full400/shapes/b_model/: ellipsoid_LMA.csv  ellipsoid_direct.csv  ellipsoid_ransac.csv
worlds/world-e6p-full400/shapes/b_raw/: ellipsoid_LMA.csv  ellipsoid_direct.csv  ellipsoid_ransac.csv
worlds/world-freiburg-gt-count80/: list_rot_cam_fusion.npy  list_stamp_cam_fusion.npy  list_traj_cam_fusion.npy  npa_vbo_index.npy  npa_vbo_vertex.npy
worlds/world-ruler-50cm/: list_rot_cam_fusion.npy  list_stamp_cam_fusion.npy  list_traj_cam_fusion.npy  npa_vbo_index.npy  npa_vbo_vertex.npy
